--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -1,4 +1,4 @@
-<!-- <app-header [Heading]="'Profile'"></app-header> -->
+<app-header [Heading]="'Profile'"></app-header>
 <ion-content>
   <div >
     <div class="row justify-content-center ">
@@ -7,17 +7,25 @@
           <ion-spinner color="success" name="lines"></ion-spinner>
         </div>
         
-        <ion-item class="profile-banner ion-text-center">
-          <ion-text class="text-light" *ngIf="userInfo">{{userInfo.first_name}} {{userInfo.last_name}}</ion-text>
-        </ion-item>
-        <div class="avatar justify-content-center">
-          <ion-avatar>
-            <img *ngIf="userInfo" [src]="userInfo.imageUrl" />
-            <img *ngIf="!userInfo"  src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+     
+     
+         <div class="profile-picture-container">
+          <div lines="none" class="card m-2 p-2">
+            <div class="avatar justify-content-center">
+              <ion-avatar>
+                <img *ngIf="userInfo" [src]="userInfo.imageUrl" />
+                <img *ngIf="!userInfo"  src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+    
+              </ion-avatar>
+              <ion-icon (click)="editProfile()" name="create"></ion-icon>
+            </div>
+            <ion-item lines="none" class="profile-banner ion-text-center p-2 mt-2">
+              <ion-text class="" *ngIf="userInfo">{{userInfo.first_name}} {{userInfo.last_name}}</ion-text>
+            </ion-item>
 
-          </ion-avatar>
-          <ion-icon (click)="editProfile()" name="create"></ion-icon>
-        </div>
+          </div>
+        
+         </div>
 
         <div class="farmName">
           <ion-text *ngIf="storeDetails"  class="p-3"
@@ -25,7 +33,7 @@
           >
         </div>
         <div class="cards">
-          <ion-item class="card m-2">
+          <ion-item lines="none" class="card m-2">
             <ion-list>
               <ion-label>Store Details</ion-label>
               <div *ngIf="storeDetails" class="div">
@@ -36,7 +44,7 @@
             </ion-list>
             <ion-button slot="end" (click)="editContacts()"> EDIT </ion-button>
           </ion-item>
-          <ion-item class="card m-2">
+          <ion-item lines="none" class="card m-2">
             <ion-list>
               <ion-label>Operation</ion-label>
               <div class="div" *ngIf="operatingHours">
@@ -59,7 +67,7 @@
               EDIT
             </ion-button>
           </ion-item>
-          <ion-item class="card m-2">
+          <ion-item lines="none" class="card m-2">
             <ion-list>
               <ion-label>Store Address</ion-label>
           
@@ -78,6 +86,7 @@
            
           </ion-item>
           <ion-button class="logout-button" color="danger" expand="block" (click)="logout()">logout</ion-button>
+          <ion-button class="logout-button" color="danger" expand="block" (click)="deleteAccount()">Delete Account</ion-button>
         </div>
       </div>
     </div>
