--- a/src/app/unAuth/sign-in/sign-in.component.html
+++ b/src/app/unAuth/sign-in/sign-in.component.html
@@ -22,7 +22,7 @@
           [control]="formGroup.controls.email"
         ></app-input>
         <app-input
-          [iconName]="'call-outline'"
+          [iconName]="'key-outline'"
           [placeholder]="'Password'"
           [type]="'password'"
           [control]="formGroup.controls.password"
