--- a/src/app/unAuth/sign-up/sign-up.component.html
+++ b/src/app/unAuth/sign-up/sign-up.component.html
@@ -3,6 +3,9 @@
     <div class="row justify-content-center ">
       
       <div class="col  p-3 col-sm-12 col-md-6 col-lg-5 mt-md-5 pt-md-4">
+        <div class="spinner-overlay" *ngIf="spinner">
+          <ion-spinner color="success" name="lines"></ion-spinner>
+        </div>
         <div class="logo pt-2 mt-5 text-center p-2">
           <ion-text class="text-center">
             <img alt="logo" [src]="logoImage" />
@@ -41,12 +44,13 @@
           [control]="formGroup.controls.email"
         ></app-input>
         <app-input
-        [iconName]="'mail-outline'"
+        [iconName]="'key-outline'"
           [placeholder]="'password'"
+          [type]="'password'"
           [control]="formGroup.controls.password"
         ></app-input>
         <div class="button mt-4">
-          <app-button (click)="signUp()"  [title]="'LOGIN'"></app-button>
+          <app-button (click)="signUp()"  [title]="'REGISTER'"></app-button>
         </div>
         <div class="have-account-redirect text-center pt-4 fixed-bottom p-3">
             <ion-text>
