--- a/src/app/auth/dashboard/dashboard.component.html
+++ b/src/app/auth/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
               <div class="icon">
                 <ion-icon name="time-outline"></ion-icon>
               </div>
-              <ion-text>{{totaPending}}</ion-text>
+              <ion-text>{{totalNumberOfOrders}}</ion-text>
               <ion-text>Total Pending</ion-text>
             </div>
           </div>
@@ -24,7 +24,7 @@
               <div class="icon">
                 <ion-icon name="receipt-outline"></ion-icon>
               </div>
-              <ion-text>{{orders.length}}</ion-text>
+              <ion-text>{{totalNumberOfOrders}}</ion-text>
               <ion-text>Total Orders</ion-text>
             </div>
           </div>
@@ -63,21 +63,26 @@
         </div>
         <div class="scrollable">
           <ion-list>
-            <ion-item *ngFor="let item of filteredOrders$" class="order-details mx-auto mt-2" lines="none">
-              <div class="icon">
-                <ion-icon size="large" name="person-outline" slot="start"></ion-icon>
-              </div>
-              <div class="details">
-                <div class="names">
-                  <ion-text>{{item.name}}</ion-text>
+              
+            <ion-item (click)="toOrder(item.id)" *ngFor="let item of filteredOrders$" class="order-details mx-auto mt-2" >
+              <ion-item class="order-detail"   lines="none">
+           
+                <div class="icon">
+                  <ion-icon size="large" name="person-outline" slot="start"></ion-icon>
                 </div>
-                <div class="inner-details">
-                  <ion-text>{{item.orderNumber}}</ion-text>
-                  <ion-text>{{item.quantity}}</ion-text>
-                  <ion-text>{{item.totalAmount}}</ion-text>
+                <div class="details">
+                  <div class="names">
+                    <ion-text>{{item.customerName}}</ion-text>
+                  </div>
+                  <div class="inner-details">
+                    <ion-text>{{item.orderID}}</ion-text>
+                    <ion-text>{{item.province}}</ion-text>
+                    <ion-text>R {{item.amount}}</ion-text>
+                  </div>
                 </div>
-              </div>
+              </ion-item>
             </ion-item>
+           
           </ion-list>
         </div>
       </div>
