--- a/src/app/auth/dashboard/dashboard.component.scss
+++ b/src/app/auth/dashboard/dashboard.component.scss
@@ -45,7 +45,7 @@
 //     align-items: flex-start; /* Align items at the top of the container */
 //   }
   .details{
-    width: 75%;
+    width: 100% !important;
     .names{
         font-size: 0.7rem;
         padding-bottom: 0.4rem;
@@ -67,6 +67,19 @@
    
     .icon{
         padding: 0.4rem;
+        margin-top: 10px;
+    }
+   
+   
+    
+  }
+  .order-detail{
+    width: 100% !important;
+    --background: #D9D9D9;
+    // border: 1px solid #16924a;
+   
+    .icon{
+       margin-left: -10px;
         margin-top: 10px;
     }
    
