--- a/src/app/auth/profile/profile.component.scss
+++ b/src/app/auth/profile/profile.component.scss
@@ -1,10 +1,10 @@
 :host{
     .profile-banner{
-        z-index: -1;
-        --background:#16924a;
+     
+      
       
           ion-text{
-            padding: 20px 0px 33px 0px ;
+            color: black;
             width: 100%;
             font-size: 1.5rem;
           }
@@ -33,7 +33,7 @@
         // border-radius: 50%;
         margin-left: auto;
         margin-right: auto;
-        margin-top: -30px;
+    
         z-index: 3;
     }
 
