--- a/src/app/unAuth/sign-in/sign-in.component.html
+++ b/src/app/unAuth/sign-in/sign-in.component.html
@@ -17,7 +17,7 @@
           <ion-text> Please enter all required fields to login </ion-text>
         </div>
         <app-input
-          [iconName]="'call-outline'"
+          [iconName]="'mail-outline'"
           [placeholder]="'email'"
           [control]="formGroup.controls.email"
         ></app-input>
