--- a/src/app/auth/dashboard/dashboard.component.scss
+++ b/src/app/auth/dashboard/dashboard.component.scss
@@ -31,12 +31,15 @@
     }
   
     .tabmenu{
+       
         .tab{
+          padding-left: 1%;
            ion-text{
                border-bottom: 1px solid black;
                padding-right: 1rem;
                padding-left: 1rem;
                padding-bottom: -5px !important;
+               font-size: 0.8rem;
            }
         }
    }
