--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -12,6 +12,10 @@
         <ion-icon name="newspaper-outline"></ion-icon>
         <ion-label>Reports</ion-label>
       </ion-tab-button>
+      <ion-tab-button tab="history">
+        <ion-icon name="time-outline"></ion-icon>
+        <ion-label>History</ion-label>
+      </ion-tab-button>
       <ion-tab-button tab="profile">
         <ion-icon name="person"></ion-icon>
         <ion-label>Profile</ion-label>
