--- a/src/app/auth/dashboard/dashboard.component.html
+++ b/src/app/auth/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
               <div class="icon">
                 <ion-icon name="time-outline"></ion-icon>
               </div>
-              <ion-text>{{totalNumberOfOrders}}</ion-text>
+              <ion-text>{{totaPending}}</ion-text>
               <ion-text>Total Pending</ion-text>
             </div>
           </div>
@@ -24,8 +24,8 @@
               <div class="icon">
                 <ion-icon name="receipt-outline"></ion-icon>
               </div>
-              <ion-text>{{totalNumberOfOrders}}</ion-text>
-              <ion-text>Total Orders</ion-text>
+              <ion-text>{{preparing}}</ion-text>
+              <ion-text>Total Preparing</ion-text>
             </div>
           </div>
           <div class="col">
