--- a/src/app/auth/order/order/order.component.html
+++ b/src/app/auth/order/order/order.component.html
@@ -82,11 +82,50 @@
                 <ion-text>{{orderObject[0].province}}</ion-text>
               </div>
             </div>
+            <div class="items">
+              <ion-list *ngFor="let item of orderObject[0].product" [inset]="true">
+                <ion-item-sliding >
+                  <ion-item [button]="true" detail="false" lines="none">
+                    <!-- Display product information here -->
+                    <div class="unread-indicator-wrapper" slot="start">
+                      <div class="unread-indicator">
+                        <ion-avatar class="mt-2" slot="start">
+                          <img
+                            alt="Silhouette of a person's head"
+                           [src]="item.productImage"
+                          />
+                        </ion-avatar>
+                      </div>
+                    </div>
+                    <ion-label>
+                      <strong>{{ item.product }} x {{item.quantity}}</strong>
+                      <ion-text>{{ item.description }}</ion-text><br />
+                    </ion-label>
+                    <div class="metadata-end-wrapper" slot="end">
+                      <ion-note color="primary">R {{ orderObject[0].amount }}</ion-note>
+                      <ion-icon color="medium" name="chevron-forward"></ion-icon>
+                    </div>
+                  </ion-item>
+                  <ion-item-options>
+                    <ion-item-option color="danger">Delete</ion-item-option>
+                  </ion-item-options>
+                </ion-item-sliding>
+              </ion-list>
+            </div>
             <div class="addButton pt-2">
-              <app-button *ngIf="orderStatus==='Pending'"  (click)="toOrder(orderObject[0].id)" [class]="'w-100%'" [title]="'Confirm'"> </app-button>
+              <app-button *ngIf="orderStatus==='Pending'"  (click)="toOrder(orderObject[0].id)" [class]="'w-100% '" [title]="'Confirm'"> </app-button>
+              
+              <div *ngIf="orderStatus==='Pending'"  class="cancelOrder-container pt-1">
+                <app-button *ngIf="orderStatus==='Pending'" (click)="cancel(orderObject[0].id)"    [class]="'w-100% '" [title]="'cancel'"> </app-button>
+              </div>
+
+
               <app-button *ngIf="orderStatus==='Preparing'"  (click)="toOrder(orderObject[0].id)" [class]="'w-100%'" [title]="'Continue'"> </app-button>
               <app-button *ngIf="orderStatus==='Dispatching'" (click)="toOrder(orderObject[0].id)" [class]="'w-100%'" [title]="'continue'"> </app-button>
               <app-button *ngIf="orderStatus==='Dispatched'" (click)="toOrder(orderObject[0].id)" [class]="'w-100%'" [title]="'continue'"> </app-button>
+            
+              <!-- <ion-button class="cancel" [ngStyle]="cancelButton" >cancel</ion-button> -->
+               
             </div>
           </div>
         </div>
