--- a/src/app/auth/order/order/order.component.scss
+++ b/src/app/auth/order/order/order.component.scss
@@ -78,4 +78,85 @@
       ion-badge{
         background-color: #14934b;
       }
+      .unread-indicator {
+        // background: var(--ion-color-primary);
+      
+        // width: 10px;
+        // height: 10px;
+      
+        // border-radius: 100%;
+      
+        // position: absolute;
+      
+        // inset-inline-start: 12px;
+        // top: 12px;
+        ion-avatar{
+          img{
+              width:3rem;
+              height:3rem
+          }
+          margin-left: 0.5rem;
+      }
+      }
+      
+      .metadata-end-wrapper {
+        position: absolute;
+      
+        top: 10px;
+        inset-inline-end: 10px;
+      
+        font-size: 0.8rem;
+      
+        display: flex;
+        align-items: center;
+      }
+      
+      ion-label strong {
+        display: block;
+      
+        max-width: calc(100% - 60px);
+      
+        overflow: hidden;
+      
+        text-overflow: ellipsis;
+      }
+      
+      ion-label ion-note {
+        font-size: 0.9rem;
+      }
+      .order-container{
+        .badge{
+              background-color: #14934b;
+             
+              
+        }
+        padding: 1%;
+        border: 1px dashed #14934b;
+        width: 95% !important;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      ion-item-sliding{
+        border-top: 0.5px solid #b9eed0;
+        border-bottom: 0.2px solid #b9eed0;
+      }
+      .badges{
+         display: flex;
+         flex-direction: row;
+         justify-content: space-between;
+      }
+      .addButton{
+         .cancel{
+            width: 93% !important;
+            margin-left: auto;
+            margin-right: auto;
+            height: 30px !important;
+         }
+      }
+      .componentSty{
+        height: 4rem;
+      }
+      .cancelOrder-container{
+       
+      }
 }
