--- a/src/app/unAuth/sign-in/sign-in.component.scss
+++ b/src/app/unAuth/sign-in/sign-in.component.scss
@@ -15,4 +15,18 @@
         align-items: center;
         z-index: 9999; /* Adjust z-index as needed to ensure it's above other content */
       }
+      .forget-text{
+        a{
+            text-decoration: none;
+            color: black;
+        }
+        text-align: end;
+        margin-bottom: -10px;
+        padding-right: 20px;
+    }
+    .sign-up{
+        text-align: end;
+        margin-bottom: -10px;
+        padding-right: 20px;
+    }
 }
