--- a/src/app/unAuth/sign-up/sign-up.component.scss
+++ b/src/app/unAuth/sign-up/sign-up.component.scss
@@ -20,5 +20,9 @@
             align-items: center;
             z-index: 9999; /* Adjust z-index as needed to ensure it's above other content */
           }
-    
+          .sign-up{
+            text-align: end;
+            margin-bottom: -10px;
+            padding-right: 20px;
+        }
 }
