--- a/src/app/auth/reports/reports.component.html
+++ b/src/app/auth/reports/reports.component.html
@@ -19,15 +19,15 @@
         <div class="report-container">
           <ion-item  >
             <ion-label>
-              <ion-text class="month-text"> January </ion-text>
+              <ion-text class="month-text"> {{month}} </ion-text>
               <ion-list>
                 <p>
-                  <ion-text> Amount: R100</ion-text>
+                  <ion-text> Amount: {{overallTotalAmount}}</ion-text>
                 </p>
               </ion-list>
               <ion-list>
                 <p>
-                  <ion-text> Total Orders: 100</ion-text>
+                  <ion-text> Total Orders: {{totalNumberOfOrders}}</ion-text>
                 </p>
               </ion-list>
             </ion-label>
