--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -111,7 +111,7 @@
           <ion-alert
             trigger="present-alert"
             header="Delete Account"
-            message="Are you sure you want to delete your account?!"
+            message="Are you sure you want to delete your account?"
             [buttons]="alertButtons"
         
           ></ion-alert>
