--- a/src/app/auth/order/order/order.component.html
+++ b/src/app/auth/order/order/order.component.html
@@ -49,7 +49,7 @@
           <ion-list>
             <ion-icon size="small" name="person-outline" slot="start"></ion-icon><ion-text class="name fw-bold"> {{orderObject[0].customerName}} </ion-text>
             <br />
-            <ion-icon size="small" name="mail-outline" slot="start"></ion-icon><ion-text> kennethtumi18@gmail.com </ion-text>
+            <ion-icon size="small" name="mail-outline" slot="start"></ion-icon><ion-text>{{orderObject[0].email_address}} </ion-text>
             <br />
             <ion-icon size="small" name="call-outline" slot="start"></ion-icon><ion-text> {{orderObject[0].phoneNumber}}</ion-text>
             <br />
