--- a/src/app/auth/order/order/order.component.scss
+++ b/src/app/auth/order/order/order.component.scss
@@ -131,7 +131,7 @@
               
         }
         padding: 1%;
-        border: 1px dashed #14934b;
+        // border: 1px dashed #14934b;
         width: 95% !important;
         margin-left: auto;
         margin-right: auto;
