--- a/src/app/auth/order/order/order.component.scss
+++ b/src/app/auth/order/order/order.component.scss
@@ -159,4 +159,9 @@
       .cancelOrder-container{
        
       }
+      .bages{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
 }
